data/all_generated_tests/raw_wast_tests/block_StackCorruption_1879.wast
;; 10. **Test Description**: Use a sequence of instructions before a block that heavily modifies the stack and a block that assumes an incorrect initial stack state or misplaced values due to the preceding instructions.    - **Constraint**: Checks for proper handling of stack values between pre-block instruction sequences and entering a block.    - **Relation to Stack Corruption**: Misinterpreting stack state before a block entry can lead to a corrupted operand stack, making subsequent operations erroneous.

(assert_invalid
  (module (func $stack-manipulation-before-block
    (i32.const 1) (f64.const 2.0) (block (result i32) (i32.add))
  ))
  "type mismatch"
)